--- a/rps-final.css
+++ b/rps-final.css
@@ -1,36 +1,59 @@
 body{
-      background-color: rgb(25, 25, 25);
-      color: white;
-      font-family: Arial;
-    }
-    .game-title{
-      font-size: 30px;
-      font-weight: bold;
-    }
-    .move-icon{
-      height: 50px;
-    }
-    .move-btn{
-      background-color: rgb(25, 25, 25);
-      border: 3px solid white;
-      border-radius: 60px;
-      height: 120px;
-      width: 120px;
-      margin-left: 10px;
-      cursor: pointer;
-    }
-    .result {
-      font-size: 25px;
-      font-weight: bold;
-      margin-top: 50px;
-    }
-    .score{
-      margin-top: 60px;
-    }
-    .reset-btn{
-      background-color: white;
-      border: none;
-      font-size: 15px;
-      padding: 8px 15px;
-      cursor: pointer;
-    }
+  background-color: rgb(213, 213, 213);
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial;
+}
+.game-title{
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+.move-icon{
+  height: 50px;
+}
+.move-btn{
+  background-color: rgb(25, 25, 25);
+  border: 3px solid white;
+  border-radius: 60px;
+  height: 120px;
+  width: 120px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.result {
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 50px;
+}
+.score{
+  margin-top: 60px;
+}
+.reset-btn{
+  background-color: rgb(213, 213, 213);
+  border: none;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 8px 15px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: all 0.2s;
+}
+.reset-btn:hover{
+  background-color: rgb(25, 25, 25);
+  color: white;
+  font-weight: bold;
+  box-shadow: 0px 0px 5px rgb(213, 213, 213);
+}
+.main-div{
+  background-color: rgb(25, 25, 25);
+  text-align: center;
+  color: white;
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 8px rgb(25, 25, 25);
+}
